@@ -55,4 +55,9 @@ class Project < ActiveRecord::Base
     self.user
   end
 
+  def users_to_email(action)
+    result = (self.users + [self.user]).uniq
+    result = result.select{|u| u.active_for_authentication? and u.email_on?(:send_email) and u.email_on?(action) and u.email_on?("project_#{self.id}") and u.email_on?("project_#{self.id}_#{action}") }
+  end
+
 end
