@@ -16,6 +16,10 @@
 * Refactoring
   * Removed unused sticky attributes sticky type, sticky position, and sticky parent
 
+* Testing
+  * Added tests for sending email for sticky_creation and sticky_completion
+  * Added tests for sending email for project_comments and sticky_comments
+
 == 0.14.1
 
 * Bug Fix
